--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 cards:
-  message: "Welcome to EazyBank cards related PROD APIs.JAAAAAAAAA"
+  message: "Welcome to EazyBank cards related PROD APIs. NOOOOOWWWw"
   contactDetails:
     name: "Sandra Harald - Product Owner"
     email: "sandra@eazybank.com"
