--- a/loans.yml
+++ b/loans.yml
@@ -4,7 +4,7 @@ build:
 loans:
   message: "Welcome to EazyBank loans related local APIs "
   contactDetails:
-    name: "Erik Blume - Developer"
+    name: "Erik Blume - Senior Developer"
     email: "amaal@eazybank.com"
   onCallSupport:
     - (452) 456-2176
