--- a/loans.yml
+++ b/loans.yml
@@ -4,7 +4,7 @@ build:
 loans:
   message: "Welcome to EazyBank loans related LOCAL APIs "
   contactDetails:
-    name: "Erik Blume - Senior Developer"
+    name: "Erik Blume - Senior Developer, hello"
     email: "amaal@eazybank.com"
   onCallSupport:
     - (452) 456-2176
